--- a/less/mixins/ku-content-elements.less
+++ b/less/mixins/ku-content-elements.less
@@ -28,7 +28,7 @@
 
 .img-fix-for-ie() {
   // IE doesn't understand flex and object-cover, so we have to give special treatment...  #?$¤!%...
-  height: 100%;
+  min-height: 100%;
   max-width: none;
   position: absolute;
   top: 50%;
