--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1108,14 +1108,14 @@
     }
   }
 }
-@media all and (min-width: @screen-sm) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+@media all and (min-width: @screen-xs) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .gridbox.with-img {
     .box2 img {
       height: 100%;
     }
   }
 }
-@media all and (min-width: @screen-sm) {
+@media all and (min-width: @screen-xs) {
   @supports (-ms-ime-align: auto) {
     .gridbox.with-img {
       .box2 img {
