--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -66,7 +66,7 @@
 
         &:active,
         &:focus {
-          color: #51a7e8;
+          color: @link-hover-color;
           top: 0;
           left: 0;
           z-index: 10;
