--- a/less/ku-advanced-lists.less
+++ b/less/ku-advanced-lists.less
@@ -99,7 +99,9 @@
   // IE11 hack
   .advanced-list {
     li {
-      min-height: auto;
+      .list-img {
+        min-height: 100px;
+      }
     }
   }
 }
