--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -189,6 +189,12 @@
   color: @gray-light;
 }
 
+nav[aria-label="Pager"] {
+  + .pagination {
+    border-top: 1px solid @gray;
+  }
+}
+
 .readAll {
   margin-bottom: 0;
 }
