--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -192,6 +192,11 @@
 nav[aria-label="Pager"] {
   + .nyhedsliste {
     border-top: 1px solid @gray;
+    &> .media {
+      &:first-child {
+        padding-top: 15px;
+      }
+    }
   }
 }
 
