--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -146,6 +146,7 @@
       a {
         color: @gray-dark;
         font-size: 1em;
+        word-break: break-all;
         padding: 3px 5px 3px 15px;
         position: relative;
         display: inline-block;
