--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -156,3 +156,8 @@ p[align="right"] {
 .panel-accordion>.panel-heading .panel-title a>strong {
   font-weight: inherit!important;
 }
+
+// Delete when search is moved down
+#navbar_menu + .search_form {
+  margin-top: 6px;
+}
