--- a/less/navbar.less
+++ b/less/navbar.less
@@ -857,7 +857,7 @@
   }
 }
 
-.ku-nav {
+.global-search {
   .btn-global-search {
     .btn {
       font-weight: 400;
@@ -905,26 +905,20 @@
     }
   }
 
-  .search_form {
-    margin-top: 6px;
-
-    .dropdown-menu {
-      li {
-        padding: 3px 20px;
-
-        &.selected,
-        &:active,
-        &:hover {
-          background-color: #efefef;
-          cursor: pointer;
-        }
-      }
-    }
-  }
-
   .global-search-options-filter {
     margin-top: 0;
     border-top: 0;
     right: 1px;
+
+    li {
+      padding: 3px 20px;
+
+      &.selected,
+      &:active,
+      &:hover {
+        background-color: #efefef;
+        cursor: pointer;
+      }
+    }
   }
 }
