--- a/docs/_includes/ku-branding.html
+++ b/docs/_includes/ku-branding.html
@@ -1,6 +1,6 @@
 <div class="container ku-branding">
   <div class="row row-equal-height">
-    <div class="col-sm-8 ku-branding-line">
+    <div class="col-sm-7 col-md-8 ku-branding-line">
       <div class="ku-branding-logo">
         <a title="Forsiden af ku.dk" href="/">
           <img class="logo-img" src="https://bootstrap.secure.ku.dk/img/faelles.svg" alt="Københavns Universitet">
@@ -13,7 +13,7 @@
         </a>
       </div>
     </div>
-    <div class="col-sm-4 search-area">
+    <div class="col-sm-5 col-md-4 search-area">
       <form class="navbar-form navbar-right search_form search_reset global-search" role="search">
         <div class="input-group">
           <input id="globalSearch" class="form-control global-search-query" type="search" placeholder="Søg..." aria-label="Inputfelt til søgeord">
