--- a/less/responsive-embed.less
+++ b/less/responsive-embed.less
@@ -69,7 +69,7 @@
 // Make input range visible in IE - why, oh why...
 
 input[type=range]::-ms-track {
-  width: 15%;
+  width: 200px;
   height: 10px;
   background: transparent;
   border-color: transparent;
@@ -95,10 +95,10 @@ input[type=range]::-ms-fill-lower {
   border-radius: 6px;
 }
 
-input[type=range]:focus::-ms-fill-lower {
-  background: @gray-888;
-}
-
-input[type=range]:focus::-ms-fill-upper {
-  background: @gray-ddd;
-}
+// input[type=range]:focus::-ms-fill-lower {
+//   background: @gray-888;
+// }
+//
+// input[type=range]:focus::-ms-fill-upper {
+//   background: @gray-ddd;
+// }
