--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -4,15 +4,27 @@
 .slide-gallery,
 .slideshow {
   visibility: hidden;
+  position: relative;
+  height: @gridbox1;
+
+  &:not(.slick-initialized) {
+    .slide-link {
+      position: absolute;
+    }
+  }
 
   &.slick-initialized {
     visibility: visible;
+
+    // .slide-link {
+    //   display: block;
+    // }
   }
 }
 
 .slick-slider {
   @media (min-width: @screen-sm) {
-    height: 289px;
+    height: @gridbox1;
   }
   position: relative;
   display: block;
@@ -34,6 +46,7 @@
   margin: 0;
   padding: 0;
   height: 100%; // KU
+
   &:focus {
     outline: none;
   }
@@ -55,6 +68,7 @@
   top: 0;
   display: block;
   height: 100%; // KU
+
   &:after,
   &:before {
     content: "";
@@ -400,9 +414,9 @@
   @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
     .caption {
       // Special caption iPad
-        position: absolute!important;
-        left: 0;
-        bottom: 0;
+      position: absolute!important;
+      left: 0;
+      bottom: 0;
     }
   }
   @media (min-width: @screen-md) {
@@ -416,6 +430,7 @@
         z-index: 2;
         background: rgba(@white-color, .9);
         border: 0;
+
         h2 {
           font-size: 26px;
           margin-bottom: 10px;
