--- a/less/ku-social-boxtop.less
+++ b/less/ku-social-boxtop.less
@@ -11,11 +11,13 @@
   }
 
   h2 {
-    font-weight: 400;
-    font-size: 1.4em;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.25;
     display: inline-block;
     padding: 0;
-    margin: 0;
+    margin: 28px 0 0 0;
+    letter-spacing: .6px;
   }
 
   &.twitter {
