--- a/less/ku-social-boxtop.less
+++ b/less/ku-social-boxtop.less
@@ -5,7 +5,7 @@
   padding-bottom: 5px;
   &:before {
     .icon;
-    margin: 0 5px 0 0;
+    margin: 0;
     position: relative;
     font-size: 36px;
   }
