--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -123,6 +123,9 @@
 
   .btn-global-search {
     width: 1%!important;
+    button {
+      #gradient.vertical(#eaeaea; #f2f2f2; 0%; 100%);
+    }
   }
 }
 @media (max-width: @screen-xs-max) {
