--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -137,7 +137,7 @@ Needs html like this:
 }
 
 @media screen and (max-width: 480px) {
-  [id*="ig"].gridbox[data-hidemobile="true"] {
+  [data-hidemobile="true"] {
       display: none;
   }
 
