--- a/less/forms.less
+++ b/less/forms.less
@@ -254,7 +254,7 @@ input[type="search"] {
 
 .radio + .radio,
 .checkbox + .checkbox {
-  margin-top: 0;
+  margin-top: 5px;
   //margin-top: -5px; // Move up sibling radios or checkboxes for tighter spacing
 }
 
