--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -57,8 +57,8 @@ nav {
   flex-grow: 1;
   margin-bottom: 30px;
   @media (max-width: @screen-xs-max) {
-    padding-left: (@grid-gutter-width / 2);
-    padding-right: (@grid-gutter-width / 2);
+    padding-left: (6px);
+    padding-right: (6px);
   }
 
   &:focus {
