--- a/less/variables.less
+++ b/less/variables.less
@@ -482,6 +482,7 @@
 @grid-gutter-height:        23px;
 // KU specific:
 @grid-gutter-by-half:       floor((@grid-gutter-width / 2));
+@mobile-grid-gutter-width:  6px;
 @default-col-width:         235px;
 
 // Navbar collapse
