--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -53,29 +53,14 @@ nav {
   }
 }
 
-#content {
-  &> .container {
-    @media (max-width: @screen-xs-max) {
-      padding-left: (@mobile-grid-gutter-width);
-      padding-right: (@mobile-grid-gutter-width);
-    }
-
-    & > .row {
-      margin-left: -@mobile-grid-gutter-width;
-      margin-right: -@mobile-grid-gutter-width;
-
-      & > [class*="col-"] {
-        padding-left: (@mobile-grid-gutter-width);
-        padding-right: (@mobile-grid-gutter-width);
-      }
-    }
-  }
-}
-
 .main-area {
   flex-grow: 1;
   margin-bottom: 30px;
-  
+  @media (max-width: @screen-xs-max) {
+    padding-left: (@grid-gutter-width / 2);
+    padding-right: (@grid-gutter-width / 2);
+  }
+
   &:focus {
     outline: 0;
     user-focus: none;
