--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -3,10 +3,10 @@
 .ku-branding {
   background-color: @white-color;
   position: relative;
-  @media (max-width: @screen-xs-max) {
-    padding-left: @grid-gutter-by-half;
-    padding-right: @grid-gutter-by-half;
-  }
+  // @media (max-width: @screen-xs-max) {
+  //   padding-left: @grid-gutter-by-half;
+  //   padding-right: @grid-gutter-by-half;
+  // }
 
   .ku-branding-logo {
     .logo-img {
