--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -53,6 +53,7 @@ nav {
   }
 }
 @media (max-width: @screen-xs-max) {
+  // Smaller margins on mobile
   #content {
     .container {
       padding-left: (@mobile-grid-gutter-width);
