--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -147,6 +147,7 @@
 }
 
 .ku-loading {
+  margin: 0 auto;
   display: inline-block;
   vertical-align: text-bottom;
   border-bottom: 3px solid @gray;
