--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -12,11 +12,11 @@ Needs html like this:
 </div>
 */
 [id*="ig"].gridbox {
-  -webkit-flex-direction: column;
   -ms-flex-direction: column;
+  -webkit-flex-direction: column;
   flex-direction: column;
   /* visibility: hidden; */
-  height: 185px!important;
+  height: 185px !important;
 }
 
 [id*="ig"].gridbox::before {
@@ -25,19 +25,19 @@ Needs html like this:
 }
 
 [id*="ig"].gridbox.with-img .box1 {
-  position: absolute!important;
+  position: absolute !important;
   bottom: 0;
   left: 0;
   width: 100%;
-  -webkit-flex: none;
   -ms-flex: none;
+  -webkit-flex: none;
   flex: none;
   z-index: 100;
 }
 
 [id*="ig"].gridbox .header, [id*="ig"].gridbox:hover .header {
   color: #606060;
-  background: rgba(255, 255, 255, .9)!important;
+  background: rgba(255, 255, 255, .9) !important;
 }
 
 [id*="ig"]:hover a {
@@ -67,19 +67,25 @@ Needs html like this:
 }
 
 #imageBox .batch a {
-  -webkit-flex: 1;
   -ms-flex: 1;
+  -webkit-flex: 1;
   flex: 1;
-  display: -webkit-flex;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
   position: relative;
 }
 
 #imageBox .batch img {
   margin: 0 auto;
-  -webkit-flex: none;
   -ms-flex: none;
+  -webkit-flex: none;
   flex: none;
   object-fit: cover;
   border: 1px solid #fff;
@@ -124,11 +130,11 @@ Needs html like this:
 }
 
 #imageBox .batch .inner {
-  display: -webkit-flex;
   display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
-  -webkit-justify-content: center;
   -ms-flex-pack: center;
+  -webkit-justify-content: center;
   justify-content: center;
   height: 100%;
   width: 100%;
@@ -138,16 +144,12 @@ Needs html like this:
 
 @media screen and (max-width: 480px) {
   div[id*="ig"][data-hidemobile="true"] {
-      display: none;
-  }
-
-  #imageBox .batch .inner {
-    display: block;
+    display: none;
   }
 
   #imageBox .batch a {
-    -webkit-flex: none;
     -ms-flex: none;
+    -webkit-flex: none;
     flex: none;
   }
 
