--- a/docs/assets/css/doctypes/researchpresentation.css
+++ b/docs/assets/css/doctypes/researchpresentation.css
@@ -1,1 +1,5 @@
 @import url("medarbejderoversigt.css");
+/* Obvius backend page width */
+.obvius-common #content-wrapper {
+  width: 783px!important;
+}
