Changed font path

--- a/less/variables.less
+++ b/less/variables.less
@@ -212,13 +212,13 @@
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-@icon-font-path:          "../fonts/";
+@icon-font-path:           "https://cms.ku.dk/styling/fonts/";//"../fonts/";
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
 @icon-font-svg-id:        "glyphicons_halflingsregular";
 //** Custom KU icon font.
-@custom-icon-font-path:   "https://bootstrap.secure.ku.dk/fonts/";
+@custom-icon-font-path:   "https://cms.ku.dk/styling/fonts/";
 @custom-icon-font-family-name: "ku-symbols";
 @custom-icon-font-name:   "KU";
 //** Element ID within SVG icon file for KU custom font.
