--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -226,6 +226,7 @@
       top: 100%;
       border-top: 0;
       right: 15px;
+      color: @text-color;
       font-size: @font-size-large;
 
       li {
