--- a/less/buttons.less
+++ b/less/buttons.less
@@ -8,6 +8,10 @@
   display: inline-block;
   margin-bottom: 0; // For input.btn
   font-weight: @btn-font-weight;
+  // KU:
+  letter-spacing: @btn-letter-spacing;
+  text-transform: uppercase;
+  // KU end
   text-align: center;
   vertical-align: middle;
   touch-action: manipulation;
