--- a/less/variables.less
+++ b/less/variables.less
@@ -295,7 +295,9 @@
 //
 //## For each of Bootstrap's buttons, define text, background and border color.
 
-@btn-font-weight:                normal;
+// KU specific:
+@btn-letter-spacing:              .7px;
+@btn-font-weight:                600;
 
 @btn-default-color:              @gray-dark;
 @btn-default-bg:                 #f4f4f4;
