--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -122,7 +122,7 @@
   }
 
   .global-search-options-toggle {
-    margin-left: -2px;
+    margin-left: -2px!important;
   }
 
   .btn-global-search {
@@ -149,12 +149,13 @@
   }
 }
 
+// Can we delete this?
 .global-search {
   .btn .caret {
     margin-left: 5px; //KU
     color: #bbb;
   }
-
+// Can we delete this?
   .input-group-btn {
     //KU
     .btn {
