--- a/less/ku-branding.less
+++ b/less/ku-branding.less
@@ -125,6 +125,10 @@
     margin-left: -2px!important;
   }
 
+  .global-search-submit {
+    .border-right-radius(@border-radius-base)
+  }
+
   .btn-global-search {
     width: 1%!important;
 
