--- a/less/navbar.less
+++ b/less/navbar.less
@@ -870,6 +870,9 @@
           font-size: 12px;
         }
       }
+      &.global-search-submit {
+        .border-right-radius(@border-radius-base)
+      }
     }
 
     .dropdown-toggle {
