--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -1116,6 +1116,15 @@
       }
     }
   }
+  .GridForside .double-column {
+    .gridbox.with-img {
+      &.size3 {
+        .box2 img {
+          height: 150%;
+        }
+      }
+    }
+  }
 }
 @media all and (min-width: @screen-xs) and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .gridbox.with-img {
