--- a/docs/_includes/components/spinner.html
+++ b/docs/_includes/components/spinner.html
@@ -11,4 +11,13 @@
     <span class="sr-only">Loading...</span>
   </div>
   {% endhighlight %}
+  <h2>KU flashing dots</h2>
+  <div class="bs-example" data-example-id="dots-spinner">
+    <div class="ku-dots-loading" role="status"><span class="sr-only">Loading...</span></div>
+  </div>
+  {% highlight html %}
+    <div class="ku-dots-loading" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  {% endhighlight %}
 </div>
