--- a/docs/_includes/nav/components.html
+++ b/docs/_includes/nav/components.html
@@ -156,4 +156,4 @@
 </li>
 <li><a href="#responsive-embed">Responsive embed</a></li>
 <li><a href="#wells">Wells</a></li>
-<li><a href="#spinner">Spinner</a></li>
+<li><a href="#spinner">Spinners</a></li>
