--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -167,8 +167,8 @@
   border-radius: 50%;
   background-color: @gray-444;
   color: @gray-444;
-  animation: ku-dots 1s infinite linear alternate;
-  animation-delay: 0.5s;
+  animation: ku-dots .6s infinite linear alternate;
+  animation-delay: 0.3s;
 
   &::after,
   &::before {
@@ -185,7 +185,7 @@
     left: -10px;
     background-color: @gray-444;
     color: @gray-444;
-    animation: ku-dots 1s infinite alternate;
+    animation: ku-dots .6s infinite alternate;
     animation-delay: 0s;
   }
 
@@ -193,8 +193,8 @@
     left: 10px;
     background-color: @gray-444;
     color: @gray-444;
-    animation: ku-dots 1s infinite alternate;
-    animation-delay: 1s;
+    animation: ku-dots .6s infinite alternate;
+    animation-delay: .6s;
   }
 }
 @keyframes ku-dots {
