--- a/less/type.less
+++ b/less/type.less
@@ -455,6 +455,6 @@ h2 {
     letter-spacing: 0.7px;
     margin: 0;
     padding: 10px 5px 8px 0;
-    border-bottom: 1px solid #bebebe;
+    border-bottom: 1px solid @ku-red;
   }
 }
