--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -63,7 +63,7 @@
     }
   }
 
-  &.smal {
+  &.with-img {
     .media {
       // If no media-object, indent content
       & > .media-left,
@@ -78,7 +78,7 @@
 // Nyhedsliste - midterkolonne:
 
 .nyhedsliste {
-  &.smal {
+  &.with-img {
     .media {
       .media-heading {
         @media (min-width: @screen-sm) {
@@ -124,7 +124,7 @@
   padding-top: 15px;
   border-top: 1px solid @gray;
 
-  &.smal {
+  &.with-img {
     .media-body:first-child {
       padding-left: @ku-thumbnails-size;
     }
