--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -38,7 +38,7 @@
       }
     }
 
-    &.smal {
+    &.with-img {
       .media-body {
         &:first-child {
           padding-left: @ku-thumbnails-size;
