--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -280,14 +280,14 @@ nav[aria-label="Pager"] {
     }
   }
 
-  .media-event {
-    // No image
-    > .media-body {
-      &:first-child {
-        padding-left: 0!important;
-      }
-    }
-  }
+  // .media-event {
+  //   // No image
+  //   > .media-body {
+  //     &:first-child {
+  //       padding-left: 0!important;
+  //     }
+  //   }
+  // }
 }
 // Float images left on multiple column spans
 
@@ -310,7 +310,7 @@ nav[aria-label="Pager"] {
     display: block!important;
   }
 
-  .news-teaser {
-    margin-left: 0!important;
-  }
+  // .news-teaser {
+  //   margin-left: 0!important;
+  // }
 }
