--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -31,7 +31,7 @@
         }
       }
 
-      &+ .media-left {
+      &> .media-left {
         .news-teaser {
           margin-left: @ku-thumbnails-size;
         }
