--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -32,7 +32,7 @@
       }
 
       &> .media-left {
-        .news-teaser {
+        &+ .news-teaser {
           margin-left: @ku-thumbnails-size;
         }
       }
