--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -31,21 +31,14 @@
         }
       }
 
-      // &> .media-left {
-      //   &~ .news-teaser {
-      //     margin-left: @ku-thumbnails-size;
-      //   }
-      // }
-    }
-
-    &.with-img {
-      .media {
-        &> .media-left {
-          &~ .news-teaser {
-            margin-left: @ku-thumbnails-size;
-          }
+      &+ .media-left {
+        .news-teaser {
+          margin-left: @ku-thumbnails-size;
         }
       }
+    }
+
+    &.smal {
       .media-body {
         &:first-child {
           padding-left: @ku-thumbnails-size;
