--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -2,7 +2,11 @@
 @import "../variables.less";
 @import "../mixins.less"; // FA styles
 // --------------------------------------------------
-
+h2 {
+  &.deloverskrift {
+    border-bottom: 1px solid @ku-red;
+  }
+}
 .gridbox {
   &.faculty_color {
     background: @ku-red;
