New html for lists

--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -36,9 +36,10 @@
   .item-left,
   .item-right {
     display: none;
-    .img-thumbnail;
-    width: 55px;
-    box-sizing: content-box;
+    img {
+      .img-thumbnail;
+      box-sizing: content-box;
+    }
   }
 }
 
