--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -35,9 +35,10 @@
 
   .item-left,
   .item-right {
-    display: none;
+    width: @ku-thumbnails-size;
     img {
       .img-thumbnail;
+      width: 55px;
       box-sizing: content-box;
     }
   }
