--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -47,11 +47,10 @@
     img {
       .img-thumbnail;
       width: 55px;
-      box-sizing: content-box;
     }
 
     a {
-      display: block;
+      display: inline-block;
     }
   }
 
