--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -64,6 +64,10 @@
 // Items:
   .item-list {
     &.with-img {
+      .item {
+        display: flex;
+        align-items: flex-start;
+      }
       .item-left {
         display: block;
         width: @ku-thumbnails-size;
