--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -3,6 +3,9 @@
 // KU custom lists
 
 .item-list {
+  padding-left: 0;
+  list-style: none;
+
   .item {
     padding: 15px 0;
 
@@ -55,7 +58,6 @@
   }
 
   &.with-img {
-
     .item-left,
     .item-right {
       width: @ku-thumbnails-size;
