--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -382,6 +382,13 @@ nav[aria-label="Pager"] {
   .news-teaser {
     margin-left: 0!important;
   }
-
   .list-img-right();
+  .item-list {
+    &.with-img {
+      .item {
+        display: block;
+        align-items: unset;
+      }
+    }
+  }
 }
