--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -4,7 +4,7 @@
 // Mixin and adjust the regular image class
 
 .thumbnail {
-  //display: block;
+  display: block;
   padding: @thumbnail-padding;
   margin-bottom: @line-height-computed;
   line-height: @line-height-base;
